--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
             <h1 class="h1 section-title">Auto Maintenance & Repair Service</h1>
 
             <p class="section-text">
-              Duis aute irure dolor in reprehenderit in voluptate velit esse Excepteur sint occaecat cupidatat non
-              proident.
+              From full vehicle details, interior only details, ceramic coatings, maintenance schedules & more all at the convenience of your location. 
             </p>
 
             <a href="#" class="btn">
