--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Mobile Detailing Studio</title>
+  <title>Mobile Detailing in Scottsdale</title>
   <meta name="title" content="Autofix - Auto Maintenance & Repair Service">
   <meta name="description" content="This is a vehicle repair html template made by codewithsadee">
 
@@ -55,7 +55,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="/assets/images/whitelogo.png" width="128" height="63" alt="autofix home">
+        <img src="/assets/images/whitelogo.png" width="128" height="63" alt="Mobile Detailing in Scottsdale">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -433,7 +433,7 @@
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="/assets/images/whitelogo.png" width="128" height="63" alt="autofix home">
+            <img src="/assets/images/whitelogo.png" width="128" height="63" alt="Mobile Detailing in Scottsdale">
           </a>
 
           <p class="footer-text">
