--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
   <title>Mobile Detailing in Scottsdale</title>
   <meta name="title" content="Autofix - Auto Maintenance & Repair Service">
-  <meta name="description" content="This is a vehicle repair html template made by codewithsadee">
+  <meta name="description" content="This is a vehicle repair html template made by Marcus">
 
   <!-- 
     - favicon
@@ -532,7 +532,7 @@
     <div class="footer-bottom">
       <div class="container">
 
-        <p class="copyright">Copyright 2024, codewithsadee All Rights Reserved.</p>
+        <p class="copyright">Copyright 2024, All Rights Reserved.</p>
 
         <img src="./assets/images/footer-shape-2.png" width="778" height="335" loading="lazy" alt="Shape"
           class="shape shape-2">
