--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="/assets/images/whitelogo.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="whitelogo.png" type="image/svg+xml">
 
   <!-- 
     - google font link
@@ -55,7 +55,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="/assets/images/whitelogo.png" width="128" height="63" alt="Mobile Detailing in Scottsdale">
+        <img src="whitelogo.png" width="128" height="63" alt="Mobile Detailing in Scottsdale">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -433,7 +433,7 @@
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="/assets/images/whitelogo.png" width="128" height="63" alt="Mobile Detailing in Scottsdale">
+            <img src="whitelogo.png" width="128" height="63" alt="Mobile Detailing in Scottsdale">
           </a>
 
           <p class="footer-text">
