--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Mobile Detailing in Scottsdale</title>
+  <title>Auto Glass</title>
   <meta name="title" content="Autofix - Auto Maintenance & Repair Service">
   <meta name="description" content="This is a vehicle repair html template made by Marcus">
 
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="whitelogo.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="images (3).jpg" type="image/svg+xml">
 
   <!-- 
     - google font link
@@ -55,37 +55,39 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="whitelogo.png" width="128" height="63" alt="Mobile Detailing in Scottsdale">
+        <img src="images3-main.png" width="128" height="63" alt="Mobile Detailing in Scottsdale">
       </a>
 
       <nav class="navbar" data-navbar>
         <ul class="navbar-list">
 
           <li>
-            <a href="#" class="navbar-link">Home</a>
+            <a href="#" class="navbar-link">Ana Səhifə
+            </a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">About</a>
+            <a href="#" class="navbar-link">Haqqımızda</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Services</a>
+            <a href="#" class="navbar-link">Xidmətlər</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Projects</a>
+            <a href="#" class="navbar-link">Layihələr</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Contact</a>
+            <a href="#" class="navbar-link">Əlaqə
+            </a>
           </li>
 
         </ul>
       </nav>
 
       <a href="#" class="btn btn-primary">
-        <span class="span">Get a Quote</span>
+        <span class="span">Qiymət Al</span>
 
         <span class="material-symbols-rounded">arrow_forward</span>
       </a>
@@ -115,16 +117,16 @@
 
           <div class="hero-content">
 
-            <p class="section-subtitle :dark">We have talented engineers & mechanics</p>
+            <p class="section-subtitle :dark">Təcrübəli mühəndis və mexaniklərimiz var</p>
 
-            <h1 class="h1 section-title">Auto Maintenance & Repair Service</h1>
+            <h1 class="h1 section-title">Avtomobilin Təmir və Baxım Xidməti</h1>
 
             <p class="section-text">
-              From full vehicle details, interior only details, ceramic coatings, maintenance schedules & more all at the convenience of your location. 
+              Tam avtomobil təmizliyi, yalnız interyer təmizliyi, seramik örtüklər, baxım cədvəlləri və daha çoxu - hamısı sizin məkanınızda yerinə yetirilir
             </p>
 
             <a href="#" class="btn">
-              <span class="span">Our Services</span>
+              <span class="span">Xidmətlərimiz</span>
 
               <span class="material-symbols-rounded">arrow_forward</span>
             </a>
@@ -151,9 +153,9 @@
         style="background-image: url('./assets/images/service-bg.jpg')">
         <div class="container">
 
-          <p class="section-subtitle :light" id="service-label">Our services</p>
+          <p class="section-subtitle :light" id="service-label">Xidmətlərimiz</p>
 
-          <h2 class="h2 section-title">We Provide Great Services For your Vehicle</h2>
+          <h2 class="h2 section-title">Avtomobiliniz üçün Əla Xidmətlər Təklif Edirik</h2>
 
           <ul class="service-list">
 
@@ -164,7 +166,7 @@
                   <img src="./assets/images/services-1.png" width="110" height="110" loading="lazy" alt="Engine Repair">
                 </figure>
 
-                <h3 class="h3 card-title">Engine Repair</h3>
+                <h3 class="h3 card-title">Mühərrik Təmir</h3>
 
                 <p class="card-text">
                   Autem velaum iure reare aenderit rui in ea roluptate esse ruam moles
@@ -182,7 +184,7 @@
                   <img src="./assets/images/services-2.png" width="110" height="110" loading="lazy" alt="Brake Repair">
                 </figure>
 
-                <h3 class="h3 card-title">Brake Repair</h3>
+                <h3 class="h3 card-title">Əyləc Təmir</h3>
 
                 <p class="card-text">
                   Autem velaum iure reare aenderit rui in ea roluptate esse ruam moles
@@ -200,7 +202,7 @@
                   <img src="./assets/images/services-3.png" width="110" height="110" loading="lazy" alt="Tire Repair">
                 </figure>
 
-                <h3 class="h3 card-title">Tire Repair</h3>
+                <h3 class="h3 card-title">Təkər Təmir</h3>
 
                 <p class="card-text">
                   Autem velaum iure reare aenderit rui in ea roluptate esse ruam moles
@@ -219,7 +221,7 @@
                     alt="Battery Repair">
                 </figure>
 
-                <h3 class="h3 card-title">Battery Repair</h3>
+                <h3 class="h3 card-title">Batareya Təmir </h3>
 
                 <p class="card-text">
                   Autem velaum iure reare aenderit rui in ea roluptate esse ruam moles
@@ -243,7 +245,7 @@
                     alt="Steering Repair">
                 </figure>
 
-                <h3 class="h3 card-title">Steering Repair</h3>
+                <h3 class="h3 card-title">Sükan Təmir</h3>
 
                 <p class="card-text">
                   Autem velaum iure reare aenderit rui in ea roluptate esse ruam moles
@@ -283,24 +285,21 @@
 
           <div class="about-content">
 
-            <p class="section-subtitle :dark">About Us</p>
+            <p class="section-subtitle :dark">Haqqımızda</p>
 
-            <h2 class="h2 section-title">We’re Commited to Meet the quality</h2>
-
-            <p class="section-text">
-              Quis autem vel eum iure reprehenderit qui in ea volu velit esse quam nihil molestiae consequatur, vel
-              illum eui dolorem eum fugiat ruo.
-            </p>
+            <h2 class="h2 section-title">Hər Cür Avtomobil Təmir Xidməti Təqdim Edirik</h2>
 
             <p class="section-text">
-              Reprehenderit qui in ea volu velit esse quam nihil moe stiae consequatur, vel illum eui.
+              İşinizi sizə çox rahat edən tam mobil xidmətlər təklif edirik.
             </p>
+
+
 
             <ul class="about-list">
 
               <li class="about-item">
                 <p>
-                  <strong class="display-1 strong">8K+</strong> Happy Clients
+                  <strong class="display-1 strong">10+ IL</strong> Təcrübə
                 </p>
               </li>
 
